Tablelayout  widht counted.
TODO: finding any setWidht method on TableLayout, TableRow, or Checkboxes A11 & A13.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,9 +86,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="5"
                     android:layout_gravity="center"
-                    android:paddingLeft="@dimen/xlarge_margin"
-                    android:paddingRight="@dimen/xlarge_margin"
-                    android:stretchColumns="*"
+                    android:shrinkColumns="*"
                     android:collapseColumns="1"
                     android:orientation="vertical">
                 <!-- TableRow#0 for answers: A11 & A12L -->
@@ -101,7 +99,7 @@
                             android:background="@color/t08"
                             android:id="@+id/A11"
                             android:onClick="onCheckBoxClicked_A11"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -110,7 +108,7 @@
                             android:background="@color/t07"
                             android:id="@+id/A12L"
                             android:onClick="onCheckBoxClicked_A12"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -126,7 +124,7 @@
                             android:background="@color/t07"
                             android:id="@+id/A13"
                             android:onClick="onCheckBoxClicked_A13"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -135,7 +133,7 @@
                             android:background="@color/t08"
                             android:id="@+id/A14L"
                             android:onClick="onCheckBoxClicked_A14"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -151,7 +149,7 @@
                             android:background="@color/t08"
                             android:id="@+id/A12P"
                             android:onClick="onCheckBoxClicked_A12"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -167,7 +165,7 @@
                             android:background="@color/t07"
                             android:id="@+id/A14P"
                             android:onClick="onCheckBoxClicked_A14"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/large"
@@ -199,6 +197,7 @@
                 <!--Empty background for qSubmit_button-->
                 <View
                     android:background="@color/t08"
+                    android:id="@+id/empty_view"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/bottom_view_height"
