--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<!-- LinearLayout is a static submit_button in the bottom-center of the screen -->
+<!-- ALL DESCENDANTS WITH DIMENSIONS "@dimen/one_dp" ARE LINES                                   -->
+<!-- ALL DESCENDANTS WITH DIMENSIONS  "1dp" HAVE DIMS SET IN MainActivity:setLayoutsDims()       -->
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CHECK METHOD NAME WHEN FINISHED^^^^^^^^^^^^^^^    -->
+
+<!-- LinearLayout is a static submit_button in the bottom-center of the display screen           -->
     <LinearLayout
         android:background="@color/t09"
         style="?android:attr/buttonStyle"
@@ -45,7 +49,7 @@
             android:paddingBottom="@dimen/margin"
             android:scaleType="fitXY"/>
     </LinearLayout>
-<!-- ScrollView contains N vertical Q-layouts each, of equal height for each Q-layout -->
+<!-- ScrollView contains N Q-layouts of equal height.                  N = NUMBER_OF_QUESTIONS   -->
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
@@ -54,34 +58,30 @@
         android:orientation="vertical">
 
     <!-- LinearLayout as "Einzelkind" (only 1) of the ScrollView -->
-    <!-- LinearLayout: all Q-Layouts have 1dp height, the real height is defined OnCreate/SetLinearLayoutHeight -->
         <LinearLayout
             android:background="@color/t09"
             android:id="@+id/parent_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        <!-- LinearLayout question 1: -->
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/margin"
+            android:paddingRight="@dimen/margin">
+<!--        <LinearLayout/> is Q-Layout #1: (TableLayout)chkbox_table,(TextView)hintText,(TextView)question_textview_1,(View)emptyView -->
             <LinearLayout
                 android:background="@color/t06"
                 android:id="@+id/layout_Q1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:gravity="bottom"
-                android:paddingLeft="@dimen/margin"
-                android:paddingRight="@dimen/margin"
                 android:clickable="true"
                 android:focusableInTouchMode="true"
                 android:focusable="false"
                 android:orientation="vertical">
 
-            <!-- paddingLeft  moves  checkbox TableLayout square right to center horizontally  -->
-            <!-- paddingLeft (margin=16dp) value will be changed to higher value for Landscape mode -->
-            <!-- Q1-Layout = from Top to Bottom: (TableLayout)checkBoxLayout  + HintLayout + questionLayout (Text) -->
-            <!-- CheckBoxLayout: 1x4 for Portrait, 2x2 for Landscape. INFO: MainActivity, Method: changeParamsDueToOrientation()-->
+            <!-- CheckBoxLayout: 1x4 for Portrait, 2x2 for Landscape. INFO: MainActivity, Method: changeTableLayoutToLandscape()-->
                 <TableLayout
                     android:background="@color/t01"
-                    android:id="@+id/chkBoxTable"
+                    android:id="@+id/chkbox_table"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="5"
@@ -172,7 +172,7 @@
                             android:text="@string/A14"/>
                     </TableRow>
                 </TableLayout>
-                <!--HintText-->
+                <!--hintText-->
                 <TextView
                     android:background="@color/t0B"
                     android:layout_width="match_parent"
@@ -185,7 +185,7 @@
                 <!--questionText-->
                 <TextView
                     android:background="@color/t04"
-                    android:id="@+id/questionTextView_1"
+                    android:id="@+id/question_textview_1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
@@ -194,7 +194,7 @@
                     android:paddingBottom="@dimen/margin"
                     android:text="@string/question_text1_P"
                     android:textSize="@dimen/xlarge" />
-                <!--Empty background for qSubmit_button-->
+                <!--emptyView as background for qSubmit_button-->
                 <View
                     android:background="@color/t08"
                     android:id="@+id/empty_view"
